objects/BMCServiceDesk__SYSTemplateAccess__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__templateId__c</fullName>
        <label>FKTemplate</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipName>SYSTemplate_Access</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__templateName__c</fullName>
        <formula>BMCServiceDesk__templateId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Name</label>
        <type>Text</type>
    </fields>
</CustomObject>